--- a/08_ClassID/classid.html
+++ b/08_ClassID/classid.html
@@ -4,6 +4,7 @@
 
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/image.css">
+
     <title>クラスとID</title>
 </head>
 
@@ -13,7 +14,8 @@
     <p><a href="#id1">「太字にする」へ</a></p>
     
     <div id="id1">
-        <h1>太字にする</h1>
+        <h1 id="sample">太字にする</h1>
+        <p>※javascriptからテキストの色を操作している</p>
         <p>&lt;b&gt;または&lt;strong&gt;を使用する</p>
 
         <ul>
@@ -49,8 +51,8 @@
     </div>
 
     <div id="id3" class="c3">
-        <h1>テキストを部分的に小さくする</h1>
-        <p>&lt;small&gt;を使用する</p>
+        <h1 id="sample2">テキストを部分的に小さくする</h1>
+        <p >&lt;small&gt;を使用する</p>
 
         <ul>
             <li>玉ねぎ<small>(新玉ねぎ)</small></li>
@@ -117,5 +119,5 @@
     </div>
 
 </body>
-
+<script src="js/classid.js"></script>
 </html>
